# HSAIL-Tools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README.md  my_cmake_win.bat
HSAILAsm/: CMakeLists.txt  HSAILAsm.cpp
cmake_modules/: FindLLVM.cmake  FindLibDwarf.cmake  FindLibElf.cmake  FindRE2C.cmake
libHSAIL/: .gitignore  BrigDwarfGenerator.cpp  BrigDwarfGenerator.h  BrigMeta.info  CMakeLists.txt  HSAILBrigContainer.cpp  HSAILBrigObjectFile.h  HSAILBrigantine.cpp  HSAILBrigantine.h  HSAILConvertors.h  HSAILDisassembler.cpp  HSAILDisassembler.h  HSAILExtension.h  HSAILFloats.cpp  HSAILFloats.h  HSAILGenericExtension.h  HSAILImage.hdl  HSAILImageExt.cpp  HSAILImageExt.h  HSAILItemBase.h  HSAILItems.cpp  HSAILItems.h  HSAILParser.cpp  HSAILParser.h  HSAILScanner.cpp  HSAILScannerRules.cpp  HSAILScannerRules.re2c  HSAILScope.h  HSAILTool.cpp  HSAILTypeUtilities.h  HSAILUtilities.cpp  HSAILUtilities.h  HSAILValidator.cpp  HSAILValidator.h  HSAILValidatorBase.cpp  HSAILValidatorBase.h  HSAILb128_t.h  Makefile  README  SectionHeaderTable.h  (+9 more)
libHSAIL-AMD/: Brig_amd.h  CMakeLists.txt  HSAILAmdExt.h  dg.cpp  dg.hdl  gcn.cpp  gcn.hdl  generate.targets  mipmap.cpp  mipmap.hdl
libHSAIL/HSAILAsm/: CMakeLists.txt  HSAILAsm.cpp  HSAILAsm.d  HSAILAsm.vcxproj
libHSAIL/HSAILTestGen/: HSAILTestGen.cpp  HSAILTestGen.vcxproj  HSAILTestGenBackend.cpp  HSAILTestGenBackend.h  HSAILTestGenCategories.h  HSAILTestGenContext.cpp  HSAILTestGenContext.h  HSAILTestGenDataProvider.cpp  HSAILTestGenDataProvider.h  HSAILTestGenDump.cpp  HSAILTestGenDump.h  HSAILTestGenEmulator.cpp  HSAILTestGenEmulator.h  HSAILTestGenInstDesc.h  HSAILTestGenLuaBackend.h  HSAILTestGenLuaTestData.h  HSAILTestGenManager.h  HSAILTestGenNavigator.cpp  HSAILTestGenNavigator.h  HSAILTestGenOptions.cpp  HSAILTestGenOptions.h  HSAILTestGenProp.cpp  HSAILTestGenProp.h  HSAILTestGenPropDesc.cpp  HSAILTestGenPropDesc.h  HSAILTestGenProvider.cpp  HSAILTestGenProvider.h  HSAILTestGenSample.cpp  HSAILTestGenSample.h  HSAILTestGenUtilities.cpp  HSAILTestGenUtilities.h  HSAILTestGenVal.cpp  HSAILTestGenVal.h  generate.targets
libHSAIL/cmake_modules/: FindLLVM.cmake  FindLibDwarf.cmake
libHSAIL/docs/: hsail_lex.txt  hsail_syntax.txt
libHSAIL/libBRIGdwarf/: BrigDwarfGenerator.cpp  BrigDwarfGenerator.d  BrigDwarfGenerator.h  BrigDwarfGenerator.new  CMakeLists.txt  SectionHeaderTable.h  hsa_dwarf.h  libBRIGdwarf.vcxproj
libHSAIL/libHSAIL/: Brig.h  BrigDwarfGenerator.cpp  BrigDwarfGenerator.h  Brig_new.hpp  CMakeLists.txt  HDLProcessor.pl  HSAILBrigContainer.cpp  HSAILBrigContainer.d  HSAILBrigContainer.h  HSAILBrigInstr.hdl  HSAILBrigObjectFile.cpp  HSAILBrigObjectFile.d  HSAILBrigObjectFile.h  HSAILBrigantine.cpp  HSAILBrigantine.d  HSAILBrigantine.h  HSAILConvertors.h  HSAILCore.hdl  HSAILDefs.hdl  HSAILDisassembler.cpp  HSAILDisassembler.d  HSAILDisassembler.h  HSAILDump.cpp  HSAILDump.d  HSAILDump.h  HSAILExtManager.cpp  HSAILExtManager.h  HSAILFloats.cpp  HSAILFloats.d  HSAILFloats.h  HSAILInstProps.cpp  HSAILInstProps.h  HSAILItemBase.h  HSAILItems.cpp  HSAILItems.d  HSAILItems.h  HSAILParser.cpp  HSAILParser.d  HSAILParser.h  HSAILSRef.h  (+29 more)
libHSAIL/libHSAIL-AMD/: HSAILAmdExt.cpp  generate.pl  mipmap.cpp  mipmap.hdl
libHSAIL/test-framework/: Makefile  README  README~  commentOut.sh  compare.c  compile4times.sh  compile4times.x
libHSAIL/tests/: README  hsail_tests_p.hsail  hsail_tests_p.hsail.original  inst.large.hsail  inst.small.hsail
libHSAIL/tests/hsail-positive/: 000.inst.image.large.hsail  000.inst.image.small.hsail  000.inst.large.hsail  000.inst.small.hsail  001.delimiters.hsail  002.version.large.hsail  002.version.small.hsail  003.pragma.hsail  004.extension.CORE.0.hsail  004.extension.CORE.hsail  004.extension.hsail  005.control.00.hsail  005.control.01.hsail  005.control.02.hsail  005.control.03.hsail  005.control.04.hsail  005.control.05.hsail  005.control.06.hsail  005.control.07.hsail  005.control.08.hsail  005.control.09.hsail  005.control.10.hsail  006.file_loc.hsail  007.rti.basic.hsail  007.rti.types.hsail  008.debug.basic.hsail  008.function.extern.align.hsail  009.function.arg.align.hsail  009.function.arg.array.hsail  009.function.arg.flexible.array.hsail  009.function.arg.generic.hsail  009.function.arg.passing.hsail  009.function.decl.def.hsail  009.function.extern.basic.hsail  009.function.forw_decl.hsail  009.function.generic.hsail  009.function.indirect.hsail  009.function.indirect.small.hsail  009.function.indirect.special.hsail  009.function.signature.0.hsail  (+27 more)
libHSAIL/tests/tg-positive-golden/: hsail_tests_p.hsail  hsail_tests_s.hsail
tests/: hsail_tests_p.hsail  simple.hsail
tests/instruction/: CMakeLists.txt  IMAGE-base-large-1_0.hsail  IMAGE-base-small-1_0.hsail  IMAGE-full-large-1_0.hsail  IMAGE-full-small-1_0.hsail  amd_mipmap-base-small-1_0.hsail  amd_mipmap-full-large-1_0.hsail  amd_mipmap-full-small-1_0.hsail  generate.sh  run_test
tests/syntax/: 000_inst_image_large.hsail  001_order_1.hsail  001_order_3.hsail  002_version_small.hsail  004_extension_CORE.hsail  004_extension_CORE_0.hsail  005_control_02.hsail  005_control_03.hsail  005_control_06.hsail  005_control_08.hsail  005_control_10.hsail  005_control_maxdynamicgroupsize.hsail  005_control_maxflatgridsize_1.hsail  005_control_maxflatgridsize_2.hsail  005_control_maxflatworkgroupsize_1.hsail  005_control_maxflatworkgroupsize_2.hsail  005_control_requiredgridsize_1.hsail  005_control_requiredgridsize_2.hsail  005_control_requiredworkgroupsize_1.hsail  005_control_requiredworkgroupsize_2.hsail  006_loc.hsail  009_function_arg_generic.hsail  009_function_decl.hsail  009_function_generic.hsail  009_function_indirect_small.hsail  009_function_signature_0.hsail  009_function_signature_1.hsail  009_function_width.hsail  010_kernel_args.hsail  010_kernel_generic.hsail  011_argscope_generic.hsail  011_argscope_jumps_03.hsail  011_argscope_jumps_04.hsail  011_argscope_jumps_05.hsail  011_argscope_special.hsail  012_var_align.hsail  012_var_alloc.hsail  012_var_base.hsail  012_var_decl.hsail  012_var_img.hsail  (+9 more)
(+60 files in other folders)
